feat(VuePress): 添加常用插件
1.添加图片缩放插件
2.添加复制代码插件

--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/juzi214032/lin-ui-doc#readme",
   "devDependencies": {
-    "vuepress": "^1.5.0"
+    "vuepress": "^1.5.0",
+    "vuepress-plugin-medium-zoom": "^1.1.8"
+  },
+  "dependencies": {
+    "vuepress-plugin-code-copy": "^1.0.6"
   }
 }
