--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lin-ui-doc",
+  "name": "lin-cms-doc",
   "version": "1.0.0",
-  "description": "Lin UI 文档",
+  "description": "Lin CMS 文档",
   "main": "index.js",
   "scripts": {
     "dev": "vuepress dev docs",
